--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div id="wrapper">
     <div id="nav">
       <strong>Hacker News</strong>
-      <div id="new">&nbsp;new |</div>
+      <div id="new">&nbsp;&nbsp;new |</div>
       <div id="points">&nbsp;points |</div>
       <div id="show">&nbsp;show |</div>
       <div id="ask">&nbsp;ask |</div>
